--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,28 @@ input::placeholder {
   }
 }
 
+.image-container {
+  height:10em;
+  position:relative;
+}
+
+.image-container > * {
+  visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  animation:12s autoplay1 infinite;
+}
+
+@keyframes autoplay1 {
+  0% {visibility: visible}
+  33.33% {visibility: hidden}
+}
+
+ .a {animation-delay: 0s}
+ .b {animation-delay: 4s}
+ .c {animation-delay: 8s}
+
 /* Utilities */
 .primary-color {
   color: #ccd6f6;
