--- a/src/index.css
+++ b/src/index.css
@@ -98,10 +98,6 @@ input::placeholder {
   background: hsl(216, 79%, 7%);
 }
 
-.about-container-bg {
-  background-color: #15273a;
-}
-
 .bg-input {
   background: #0b1e36;
   border: 1px solid dimgrey;
@@ -325,7 +321,7 @@ input::placeholder {
   margin-top: 100px;
 }
 
-/*-------partners------ --*/
+/*-------Partners------ --*/
 .logo-container {
   border-radius: 10px;
   height: auto;
@@ -379,9 +375,9 @@ input::placeholder {
 }
 
 /*----------- market----------- */
-.mkt-container {
+/* .mkt-container {
   background-color: #15273a;
-}
+} */
 
 .mkt-heading {
   color: #ccd6f6;
@@ -523,6 +519,15 @@ input::placeholder {
 
 .icon:hover {
   stroke: teal;
+}
+
+/* ------------------About & contact---------------- */
+.about-input::placeholder {
+  padding:1px;
+  color:  #1f2937;
+}
+.contact-input::placeholder {
+  padding:1px;
 }
 
 /*--------------media query----------------- */
